# pydata_workshop_september2025

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
solutions/multi-agent-workflow/services/dwarf/: app.py
solutions/multi-agent-workflow/services/eagle/: Gwaihir_state.json  app.py
solutions/multi-agent-workflow/services/elf/: Legolas_state.json  app.py
solutions/multi-agent-workflow/services/hobbit/: Frodo_state.json  app.py
solutions/multi-agent-workflow/services/ranger/: app.py
solutions/multi-agent-workflow/services/wizard/: Gandalf_state.json  app.py
solutions/multi-agent-workflow/services/workflow-llm/: app.py
workshop/: dapr_pydata_2025.pptx
workshop/intro-to-agents/: [optional] assignment_01.md  weather_agent.py  weather_tools.py
workshop/multi-agent-workflow/: assignment_01.md  assignment_02.md  assignment_03.md
workshop/multi-agent-workflow/services/elf/: Legolas_state.json  app.py
workshop/multi-agent-workflow/services/hobbit/: Frodo_state.json  app.py
workshop/multi-agent-workflow/services/wizard/: Gandalf_state.json  app.py
