[project]
name = "daprinaction-092025"
version = "0.1.0"
description = "Dapr in Action: Collaborative Multi-Agent Workflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "dapr-agents==0.8.2",
    "python-dotenv",
    "prompty"
]
